Bug 1928340 - Add some log for pointer lock; r=smaug

Differential Revision: https://phabricator.services.mozilla.com/D228090