dom/base/PointerLockManager.h
@@ -27,7 +27,7 @@ class PointerLockManager final {
   static void RequestLock(dom::Element* aElement, dom::CallerType aCallerType);
 
   MOZ_CAN_RUN_SCRIPT_BOUNDARY
-  static void Unlock(dom::Document* aDoc = nullptr);
+  static void Unlock(const char* aReason, dom::Document* aDoc = nullptr);
 
   static bool IsLocked() { return sIsLocked; }
 
